<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.hplr</groupId>
        <artifactId>ranking</artifactId>
        <version>0.1</version>
    </parent>

    <artifactId>bootstrap</artifactId>
    <packaging>war</packaging>


    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <skipPi>true</skipPi>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.hplr</groupId>
            <artifactId>user</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>org.hplr</groupId>
            <artifactId>game</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>org.hplr</groupId>
            <artifactId>tournament</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.hplr.RankingApplication</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.16.1</version>
                <configuration>
                    <exportLineCoverage>true</exportLineCoverage>
                    <outputFormats>
                        <value>XML</value>
                    </outputFormats>
                    <excludedClasses>
                        <param>org.hplr.core.model.*</param>
                        <param>org.hplr.core.util.*</param>
                        <param>org.hplr.infrastructure.dbadapter.entities</param>
                        <param>org.hplr.infrastructure.controller.*</param>
                    </excludedClasses>
                </configuration>
                <executions>
                    <execution>
                        <id>put-it-together</id>
                        <configuration>
                            <skip>${skipPi}</skip>
                        </configuration>

                        <goals>
                            <goal>report-aggregate</goal>

                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>1.2.1</version>
                    </dependency>

                </dependencies>
            </plugin>
        </plugins>
    </build>


</project>